libs/toolkit-macros-tests/tests/ui/fail/unknown_capability_with_suggestion.rs
use toolkit_macros::module;

#[module(name="x", capabilities=[rst])]
pub struct X;

fn main() {}

